# beam

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.github/actions/setup-conan/: action.yml
.github/workflows/: static-analysis.yml
cmake/: clang-tidy.cmake  cppcheck.cmake  iwyu.cmake  project-options.cmake
src/: CMakeLists.txt
src/beam/: CMakeLists.txt
src/beam/shaders/: raytracer.comp
src/beam/src/: application.cpp  application.hpp  beam.m.cpp  free_camera_controller.cpp  free_camera_controller.hpp  perspective_camera.cpp  perspective_camera.hpp  raytracer.cpp  raytracer.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  sphere.hpp
src/cppext/: CMakeLists.txt
src/niku/src/: niku_application.cpp
src/vkrndr/: CMakeLists.txt
src/vkrndr/include/: vulkan_commands.hpp  vulkan_image.hpp  vulkan_memory.hpp  vulkan_pipeline.hpp  vulkan_renderer.hpp
src/vkrndr/src/: vulkan_commands.cpp  vulkan_image.cpp  vulkan_memory.cpp  vulkan_pipeline.cpp  vulkan_renderer.cpp  vulkan_swap_chain.cpp
